@@ -121,6 +121,7 @@ wxMSW:
 - Compile fix for WinCE in window.cpp (no VkKeyScan in Windows CE).
 - Fix quoting of arguments passed to wxExecute(char **) (Brian Ravnsgaard Riis).
 - Support disabling items before adding them to the menu (Christian Walther).
+- Allow to call SetFont(wxNullFont) to reset the font to default.
 
 wxGTK:
 
